--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "mysql2": "latest",
-    "next": "15.2.4",
+    "next": "^15.5.6",
     "next-themes": "latest",
+    "nodemailer": "^6.10.1",
     "react": "^19",
     "react-chartjs-2": "latest",
     "react-day-picker": "latest",
