--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
     "embla-carousel-react": "latest",
     "geist": "latest",
     "input-otp": "latest",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
     "mysql2": "latest",
     "next": "^15.5.6",
     "next-themes": "latest",
     "nodemailer": "^6.10.1",
+    "puppeteer": "^24.34.0",
     "react": "^19",
     "react-chartjs-2": "latest",
     "react-day-picker": "latest",
