--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "npm rebuild lightningcss --build-from-source || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -50,6 +51,7 @@
     "input-otp": "latest",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
+    "lightningcss": "^1.28.3",
     "lucide-react": "^0.454.0",
     "mysql2": "latest",
     "next": "^15.5.6",
