--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "postinstall": "npm rebuild lightningcss --build-from-source || true"
+    "postinstall": "node -e \"const { platform, arch } = process; if (platform === 'linux' && arch === 'x64') { try { require('child_process').execSync('npm install lightningcss-linux-x64-gnu@^1.28.3 --no-save', { stdio: 'inherit' }); } catch (e) { console.error(e); process.exit(1); } } else { console.log('Skipping lightningcss-linux-x64-gnu install on', platform, arch); }\" && npm rebuild lightningcss --build-from-source || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
