--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
-    "postinstall": "npm ls --depth=0 2>/dev/null || true"
+    "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -49,12 +48,11 @@
     "embla-carousel-react": "latest",
     "geist": "latest",
     "input-otp": "latest",
-    "lucide-react": "latest",
     "mysql2": "latest",
     "next": "^15.5.6",
     "next-themes": "latest",
     "nodemailer": "^6.10.1",
-    "puppeteer": "^24.36.1",
+    "puppeteer": "^24.34.0",
     "react": "^19",
     "react-chartjs-2": "latest",
     "react-day-picker": "latest",
